--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
 
 /* Global Styles */
 :root {
-  --primary-color: #dc3545;
+  /* --primary-color: #dc3545; */
+  --primary-color: #6E5494;  
   --dark-color: #333333;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
@@ -19,7 +20,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
+  background-color: #1212;
   color: #333;
 }
 
@@ -218,6 +219,7 @@ img {
 .btn-block {
   display: block;
   width: 100%;
+  border-radius: 18px
 }
 
 .btn-sm {
@@ -267,6 +269,7 @@ img {
 .alert-dark {
   background: var(--dark-color);
   color: #fff;
+  border-radius: 5px
 }
 
 .btn-danger,
@@ -363,13 +366,13 @@ table th {
 }
 
 .navbar a {
-  color: #fff;
+  color: #BDAFD2;
   padding: 0.45rem;
   margin: 0 0.25rem;
 }
 
 .navbar a:hover {
-  color: var(--light-color);
+  color: var(--dark-color);
 }
 
 .navbar .welcome span {
